--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Chào mừng đến với Trang Web Đẹp</h1>
+        <h1>Nguyen Huu Khai</h1>
         <nav>
             <ul>
                 <li><a href="#">Trang Chủ</a></li>
